<resources>
    <string name="app_name">QuizApp</string>
    <string name="q1">1. Which transmission media has the highest transmission speed in a network?</string>
    <string name="m1">a) coaxial cable</string>
    <string name="m2">b) twisted pair cable</string>
    <string name="m3">c) optical fiber</string>
    <string name="m4">d) electrical cable</string>
    <string name="q2">2. The physical layer is responsible for (multiple answers)</string>
    <string name="m2a">a) line coding</string>
    <string name="m2b">b) channel coding</string>
    <string name="m2c">c) modulation</string>
    <string name="m2d">d) flow control</string>
    <string name="q3">3. In this topology there is a central controller or hub</string>
    <string name="m3a">a) Star</string>
    <string name="m3b">b) Mesh</string>
    <string name="m3c">c) Ring</string>
    <string name="m3d">d) Bus</string>
    <string name="q4">4. In TDM, slots are further divided into</string>
    <string name="m4a">a) Seconds</string>
    <string name="m4b">b) Frames</string>
    <string name="m4c">c) Packets</string>
    <string name="m4d">d) None of the mentioned</string>
    <string name="q5">5. The ASCII encoding of binary data is called</string>
    <string name="m5a">a) base 64 encoding</string>
    <string name="m5b">b) base 32 encoding</string>
    <string name="m5c">c) base 16 encoding</string>
    <string name="m5d">d) base 8 encoding</string>
    <string name="q6">6. Wireless transmission can be done via</string>
    <string name="m6a">a) radio waves</string>
    <string name="m6b">b) microwaves</string>
    <string name="m6c">c) infrared</string>
    <string name="m6d">d) all of the mentioned</string>
    <string name="q7">7. When displaying a web page, the application layer uses the</string>
    <string name="m7a">a) HTTP protocol</string>
    <string name="m7b">b) FTP protocol</string>
    <string name="m7c">c) SMTP protocol</string>
    <string name="m7d">d) None of the mentioned</string>
    <string name="q8">8. Multiplexing technique that shifts each signal to a different carrier frequency</string>
    <string name="m8a">a) FDM</string>
    <string name="m8b">b) TDM</string>
    <string name="m8c">c) Either a or b</string>
    <string name="m8d">d) Both a and b</string>
    <string name="q9">9. Bits can be send over guided and unguided media as analog signal by</string>
    <string name="m9a">a) digital modulation</string>
    <string name="m9b">b) amplitude modulation</string>
    <string name="m9c">c) frequency modulation</string>
    <string name="m9d">d) phase modulation</string>
    <string name="q10">10. The following term is not associted with DSL</string>
    <string name="m10a">a) DSLAM</string>
    <string name="m10b">b) CO</string>
    <string name="m10c">c) Splitter</string>
    <string name="m10d">d) CMTS</string>
</resources>
